# doorbot-detector

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  detector.ini.dist  requirements.txt  run.py  setup.cfg  snaps.py  tuner.py  window.py
.github/workflows/: tests.yaml
detector/: camera.py  capture.py  detector.py  icon.py  notificationicon.py  notifier.py  observer.py  overlay.py  reserver.py  timer.py  util.py
doorbot/: __main__.py  camera.py  config.py  detector.py  exceptions.py  icon.py  notificationicon.py  notifier.py  observer.py  overlay.py  portability.py  util.py
doorbot/cameras/: __init__.py  opencvcam.py  rtsp.py
doorbot/capturers/: __init__.py  photo.py  video.py
doorbot/detectors/: __init__.py  motion.py
doorbot/notifiers/: __init__.py  email.py  logger.py  mqtt.py
doorbot/observers/: __init__.py  framebuffer.py  reserver.py
doorbot/overlays/: __init__.py  motion.py  opencv.py  timestamp.py  weather.py
doorbot/peephole/: __main__.py  icon.py  notificationicon.py
doorbot/tuner/: __main__.py
tests/: fake_camera.py  test_capture.py  test_detector.py  test_notifier.py  test_observer.py  test_util.py
