[metadata]
name = doorbot-indigoparadox
version = v0.x
description = Modular camera monitoring tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/doorbot-detector
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/doorbot-detector/issues
classifiers =
   Programming Language :: Python :: 3
   License ::
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
